--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="map"></div>
     <script>
 
-        mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN';
+        mapboxgl.accessToken = 'pk.eyJ1Ijoid2lsbGlhbWthbWF0YSIsImEiOiJjbDRxM3Q0ODkwbmhzM2lxemh1cDB1YXhxIn0.MfFL2ur5YINKbizfLRnNCw';
         const mapoptions ={
             Fcontainer: 'map',
             style: 'mapbox://styles/mapbox/streets-v11',
